tests/negative/test_decl_bad_type.orb
fnc main() {
    let i32 cn x = 500;
    let u16 y = x;
}